--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "author": "Skye Purchase <atp45@cam.ac.uk>",
   "license": "MIT",
   "scripts": {
-      "build": "tsc",
-      "start": "node ./bin/app.js",
-      "dev": "ts-node ./src/app.ts"
+    "build": "tsc",
+    "start": "node ./bin/app.js",
+    "dev": "ts-node ./src/app.ts"
   },
   "dependencies": {
     "@types/node": "^20.10.7",
+    "lodash": "^4.17.21",
+    "moo": "^0.5.2",
+    "nearley": "^2.20.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
+    "@types/moo": "^0.5.9",
+    "@types/nearley": "^2.11.5",
     "ts-node": "^10.9.2"
   }
 }
